--- a/templates/qna.html
+++ b/templates/qna.html
@@ -2,42 +2,32 @@
 <html lang="en">
 
 <head>
-  <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>QnA</title>
-  <!-- plugins:css -->
   <link rel="stylesheet" href="../static/vendors/mdi/css/materialdesignicons.min.css">
-  <link rel="stylesheet" href="../static/vendors/base/vendor.bundle.base.css">
-  <!-- endinject -->
-  <!-- plugin css for this page -->
-  <!-- End plugin css for this page -->
-  <!-- inject:css -->
   <link rel="stylesheet" href="../static/css/style.css">
-  <!-- endinject -->
-  <link rel="shortcut icon" href="../static/images/favicon.png" />
+  <link rel="shortcut icon" href="../static/images/idea.svg" />
 </head>
 
 <body>
   <div class="container-scroller">
-    <!-- partial:../static/partials/_navbar.html -->
     <nav class="navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
       <div class="navbar-brand-wrapper d-flex justify-content-center">
         <div class="navbar-brand-inner-wrapper d-flex justify-content-between align-items-center w-100">  
-          <a class="navbar-brand brand-logo" href="index.html"><img src="../static/images/logo.svg" alt="logo"/></a>
-          <a class="navbar-brand brand-logo-mini" href="index.html"><img src="../static/images/logo-mini.svg" alt="logo"/></a>
+          <a href="/dashboard" style="text-decoration: none;color:black;margin-bottom: 0px;padding-bottom: 0px;"><img src="../static/images/idea.svg" alt="logo" style="height: 35px;" /></a>
           <button class="navbar-toggler navbar-toggler align-self-center" type="button" data-toggle="minimize">
             <span class="mdi mdi-sort-variant"></span>
           </button>
         </div>  
       </div>
       <div class="navbar-menu-wrapper d-flex align-items-center justify-content-end">
-        
+        Questioning & Answering
         <ul class="navbar-nav navbar-nav-right">
           
           <li class="nav-item nav-profile dropdown">
             <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" id="profileDropdown">
-              <img src="../static/images/faces/face5.jpg" alt="profile"/>
+              <img src="../static/images/faces/person.png" alt="profile"/>
               <span class="nav-profile-name">{{ current_user.username }}</span>
             </a>
             <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="profileDropdown">
@@ -54,9 +44,7 @@
         </button>
       </div>
     </nav>
-    <!-- partial -->
     <div class="container-fluid page-body-wrapper">
-      <!-- partial:partials/_sidebar.html -->
       <nav class="sidebar sidebar-offcanvas" id="sidebar">
         <ul class="nav">
           <li class="nav-item">
@@ -101,7 +89,6 @@
           </li>
         </ul>
       </nav>
-      <!-- partial -->
       <div class="main-panel">
         <div class="content-wrapper">
           <div class="row">
@@ -109,21 +96,20 @@
             <div class="col-12 grid-margin stretch-card">
               <div class="card">
                 <div class="card-body">
-                  <h4 class="card-title">Input Requirements</h4>
+                  <h4 class="card-title">Input Question</h4>
                   <p class="card-description">
-                    <!-- Use the <code>.form-inline</code> class to display a series of labels, form controls, and buttons on a single horizontal row -->
                   </p>
-
-                  <form class="form-inline" action="{{ url_for('qna') }}" method="post">
-                    <label class="sr-only" for="inlineFormInputGroupUsername2">Context</label>
+                  
+                  <form class="form-inline" action="{{ url_for('qna' , pdf_id=pdf.id ) }}" method="post">
                     <div class="input-group mb-2 mr-sm-2">
                       <input type="text" name="keyword" id="ques" name="ques" class="form-control" enctype="multipart/form-data"
                         placeholder="Write your Question Here">
                     </div>
-
                     <button type="submit" class="btn btn-primary mb-2">Submit</button>
                   </form>
-
+                  <p class="card-description">
+                    Ask any <code>Question</code> you have from the <code>uploaded PDF</code>!
+                  </p>
                 </div>
               </div>
             </div>
@@ -134,10 +120,11 @@
                   <div class="card">
                     <div class="card-body">
                       <h4 class="card-title">Answer</h4>
-                      <div class="card">
-                    Answer : <br><br>
-                    {{answer}}
-                </div>
+                      <p class="card-description">
+                      </p>
+                      <p>
+                        {{answer}}
+                      </p>
                     </div>
                   </div>
                 </div>
@@ -147,33 +134,19 @@
             
           </div>
         </div>
-        <!-- content-wrapper ends -->
-        <!-- partial:../static/partials/_footer.html -->
         <footer class="footer">
           <div class="d-sm-flex justify-content-center justify-content-sm-between">
             <span class="text-muted text-center text-sm-left d-block d-sm-inline-block">Copyright © 2020 <a
                 href="https://www.analyticware.in/" target="_blank">AnalyticWare</a>. All rights reserved.</span>
           </div>
         </footer>
-        <!-- partial -->
       </div>
-      <!-- main-panel ends -->
     </div>
-    <!-- page-body-wrapper ends -->
   </div>
-  <!-- container-scroller -->
-  <!-- plugins:js -->
   <script src="../static/vendors/base/vendor.bundle.base.js"></script>
-  <!-- endinject -->
-  <!-- Plugin js for this page-->
-  <!-- End plugin js for this page-->
-  <!-- inject:js -->
   <script src="../static/js/off-canvas.js"></script>
   <script src="../static/js/hoverable-collapse.js"></script>
   <script src="../static/js/template.js"></script>
-  <!-- endinject -->
-  <!-- Custom js for this page-->
-  <!-- End custom js for this page-->
 </body>
 
 </html>
