--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -9,11 +9,11 @@
   <link rel="stylesheet" href="../static/css/style.css">
   <link rel="shortcut icon" href="../static/images/idea.png" />
   <!-- socetio -->
-  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
+  <!-- <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.4.8/socket.io.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.5.0.min.js"></script>
-  <link rel="stylesheet" href="../static/css/index.css">
+  <link rel="stylesheet" href="../static/css/index.css"> -->
   <!-- socketio -->
 </head>
 
@@ -268,8 +268,8 @@
   <script src="../static/js/dashboard.js"></script>
 
   <!-- socketio -->
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-  <script src="../static/js/index.js"></script>
+  <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+  <script src="../static/js/index.js"></script> -->
   <!-- socketio -->
 
 </body>
