--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -64,7 +64,8 @@
     });
 
   </script>
-
+    <div class="container">
+    <div class="row">
       <div id="Smallchat">
         <div class="Layout Layout-open Layout-expand Layout-right"
           style="background-color: #3F51B5;color: rgb(255, 255, 255);opacity: 5;border-radius: 10px;">
@@ -111,6 +112,8 @@
         </div>
         <!--===============CHAT ON BUTTON END===============-->
       </div>
+    </div>
+    </div>
   
   <!-- body -->
 
