--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -21,7 +21,7 @@
 <body>
 
   <!-- socketio -->
-  <script type="text/javascript">
+  <!-- <script type="text/javascript">
 
     $(document).ready(function () {
       var socket = io.connect('http://' + document.domain + ':' + location.port);
@@ -113,7 +113,7 @@
         <!--===============CHAT ON BUTTON END===============-->
       </div>
     </div>
-    </div>
+    </div> -->
   
   <!-- body -->
 
