--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -103,15 +103,15 @@
               </div>
             </div>
           </div>
-        </div>
+        </div>-->
         <!--===============CHAT ON BUTTON START===============-->
-        <div class="chat_on">
+        <!-- <div class="chat_on">
           <span class="material-icons">
             face
           </span> 
-        </div>
+        </div> -->
         <!--===============CHAT ON BUTTON END===============-->
-      </div>
+      <!-- </div>
     </div>
     </div> -->
   
