--- a/templates/wordcloud.html
+++ b/templates/wordcloud.html
@@ -76,7 +76,7 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('qna', pdf_id=pdf.id) }}">
+            <a class="nav-link" href="{{ url_for('qna_render', pdf_id=pdf.id) }}">
               <i class="mdi mdi-emoticon menu-icon"></i>
               <span class="menu-title">QnA</span>
             </a>
