--- a/templates/analyse.html
+++ b/templates/analyse.html
@@ -106,7 +106,7 @@
         <!--===============CHAT ON BUTTON START===============-->
         <div class="chat_on">
           <span class="material-icons">
-            face
+            book
           </span> 
         </div>
         <!--===============CHAT ON BUTTON END===============-->
