--- a/templates/searchengine.html
+++ b/templates/searchengine.html
@@ -89,7 +89,7 @@
 
                   <form class="form-inline" method="post" action="{{ url_for('found') }}">
 
-                    <label class="sr-only" for="inlineFormInputGroupUsername2">IEEE or Arxiv</label>
+                    <label class="sr-only" for="inlineFormInputGroupUsername2">IEEE or Arxiv or Nature</label>
                     <div class="input-group mb-2 mr-sm-2">
                       <input type="text" name="engine" class="form-control" enctype="multipart/form-data"
                         placeholder="IEEE or Arxiv">
