--- a/templates/searchengine.html
+++ b/templates/searchengine.html
@@ -107,7 +107,7 @@
         <!--===============CHAT ON BUTTON START===============-->
         <div class="chat_on">
           <span class="material-icons">
-            link
+            vpn_key
           </span> 
         </div>
         <!--===============CHAT ON BUTTON END===============-->
